--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@ https://www.tooplate.com/view/2123-simply-amazed
             }
 
             var whatsappMessage = "Name: " + name + "%0AEmail: " + email + "%0AMobile Number: " + number + "%0AMessage: " + message;
-            var whatsappLink = "https://wa.me/9909353099/?text=" + whatsappMessage;
+            var whatsappLink = "https://wa.me/+919909353099/?text=" + whatsappMessage;
 
             window.open(whatsappLink, "_blank");
 
