--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ https://www.tooplate.com/view/2123-simply-amazed
 
         <main id="content-box" class="order-first">
             <div class="banner-section section parallax-window" data-parallax="scroll"
-                data-image-src="img/section-1-bg.jpg" id="section-1">
+                data-image-src="img/WhatsApp Image 2023-10-16 at 9.06.13 PM.jpeg" id="section-1">
                 <div class="container">
                     <div class="item">
                         <div class="bg-blue-transparent logo-fa"
