--- a/index.html
+++ b/index.html
@@ -437,8 +437,10 @@ https://www.tooplate.com/view/2123-simply-amazed
                                 <div class="mapouter">
                                     <div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0"
                                             scrolling="no" marginheight="0" marginwidth="0"
-                                            src="https://maps.google.com/maps?width=350&amp;height=400&amp;hl=en&amp;q=FF6 B BUL, Laxmivilla Township, above Corporation Bank, GIDC, Sachin, Surat, Gujarat 394230&amp;t=&amp;z=7&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a
+                                            src= "https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=sanyam design surat&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a
                                             href="https://connectionsgame.org/">Connections NYT</a></div>
+
+                                    
                                     <style>
                                         .mapouter {
                                             position: relative;
