--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ https://www.tooplate.com/view/2123-simply-amazed
                     </div>
                     <div class="mx-auto gallery-slider ">
                         <figure class="effect-julia item  ">
-                            <img  class="size" src="img/b1.jpg" alt="Image">
+                            <img  class="size" src="img/c1.jpeg" alt="Image">
                             <figcaption>
                                
                                 <a href="#">View more</a>
