--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ https://www.tooplate.com/view/2123-simply-amazed
                             </figcaption>
                         </figure>
                         <figure class="effect-julia item">
-                            <img class="size" src="img/s1.jpeg" alt="Image">
+                            <img class="size" src="img/c9.jpeg" alt="Image">
                             <figcaption>
                                
                                 <a href="#">View more</a>
